--- a/mainsite/static/iptcnet/css/_content.scss
+++ b/mainsite/static/iptcnet/css/_content.scss
@@ -39,7 +39,7 @@
 /* =================================================================== */
 /* PANELS */
 
-.tile, .tile-blue, .tile-white, .tile-alert, .tile-transparent, .tile-poll, .eventsNearYou {
+.tile, .tile-blue, .tile-white, .tile-white-text, .tile-alert, .tile-transparent, .tile-poll, .eventsNearYou {
   padding:              0 15px;
 }
 
@@ -54,7 +54,16 @@
 .tiletitles {
   text-align:             center;
 }
-
+.tile-white {
+  table {
+    td {
+      padding:            10px;
+    }
+  }
+}
+.tile-white-text {
+  color:                  $col-white;
+}
 /* =================================================================== */
 /* PANELS */
 
