--- a/spe_events/static/atce/css/mainstyle.css
+++ b/spe_events/static/atce/css/mainstyle.css
@@ -101,17 +101,19 @@ a:hover { text-decoration: none; }
 
 .dropdown-menu li { padding: 10px; border-bottom: 1px solid #e1e1e1; white-space: nowrap; }
 
-.dropdown-menu li a { padding: 10px 0 0 0; font-size: 15px; font-weight: 400; color: #67c18d; height: 58px; text-shadow: 0 0 0 transparent; }
+.dropdown-menu li a { padding: 10px 0 0 0; font-size: 15px; font-weight: 400; color: #67c18d !important; height: 58px; text-shadow: 0 0 0 transparent; }
 
 .dropdown-menu li a:hover { background: none; }
 
-.dropdown-menu li:hover { background-color: #e1e1e1; }
+.dropdown-menu li:hover { background-color: #74d79e; }
 
 .hamburger { padding-top: 10px; font-size: 40px; color: white !important; }
 
 .hamburger a { color: white !important; }
 
-#collapseHamMenu a { color: white !important; text-shadow: 0 0 0 transparent; }
+#collapseHamMenu .megarow { background-color: white; }
+
+#collapseHamMenu a { text-shadow: 0 0 0 transparent; }
 
 div.nav li.dropdown:hover > ul.dropdown-menu { display: block; }
 
