--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -400,7 +400,7 @@
 {#                            {{ variables.cip }}#}
 
 {#                            {% if variables.is_local_ip == True %}#}
-                            <div class="gse-search" style="width: 350px">
+                            <div class="gse-search">
                                 <!-- These styles fix CSE and Bootstrap 3 conflict -->
                                 <style type="text/css">
                                     .gsc-adBlock {
