--- a/mainsite/static/www/css/_googlesearch.scss
+++ b/mainsite/static/www/css/_googlesearch.scss
@@ -53,3 +53,6 @@ table.gsc-search-box td.gsc-input {
 table.gsc-search-box td.gsc-input {
     padding: 0 !important;
 }
+.gse-search {
+  width: 300px;
+}
