minor label text change, per Glenda

--- a/spe_preferences/templates/spe_preferences/contact_prefs.html
+++ b/spe_preferences/templates/spe_preferences/contact_prefs.html
@@ -589,7 +589,7 @@ TABLE, DL {
 <tr>
 <td class="matching-width"><input type="radio" id="id_email_sub_jpt_y" name="email_sub_jpt" value="1" title="JPT: Yes" /></td>
 <td class="matching-width"><input type="radio" id="id_email_sub_jpt_n" name="email_sub_jpt" value="0" title="JPT: No" /></td>
-<td><b>Journal&nbsp;of&nbsp;Petroleum&nbsp;Technology</b> (every&nbsp;1&nbsp;-&nbsp;2&nbsp;weeks)</td>
+<td><b>Journal&nbsp;of&nbsp;Petroleum&nbsp;Technology</b> (weekly)</td>
 </tr>
 <tr>
 <td class="matching-width"><input type="radio" id="id_email_sub_ogf_y" name="email_sub_ogf" value="1" title="OGF: Yes" /></td>
