search fix on magazines

--- a/mainsite/static/twa/css/_header.scss
+++ b/mainsite/static/twa/css/_header.scss
@@ -139,7 +139,7 @@
   }
 }
 .searchbar {
-  background-color:     $col-notsolightgrey;
+  //background-color:     $col-notsolightgrey;
   padding:              3px 0;
 }
 .menu2cont {
