--- a/mainsite/static/jpt/css/_header.scss
+++ b/mainsite/static/jpt/css/_header.scss
@@ -146,6 +146,6 @@
   }
 }
 .searchbar {
-  background-color:     $col-notsolightgrey;
+  //background-color:     $col-notsolightgrey;
   padding:              3px 0;
 }
