--- a/mainsite/static/ogf/css/_ogfheader.scss
+++ b/mainsite/static/ogf/css/_ogfheader.scss
@@ -141,6 +141,6 @@
   }
 }
 .searchbar {
-  background-color:     $col-ogfnotsolightgrey;
+  //background-color:     $col-ogfnotsolightgrey;
   padding:              3px 0;
 }
