--- a/spe_events/templates/iptc/iptc_base.html
+++ b/spe_events/templates/iptc/iptc_base.html
@@ -1,6 +1,11 @@
 {% extends "events_html5_bootstrap.html" %}
 {% load cms_tags sekizai_tags menu_tags staticfiles %}
 
+{% block favicon %}
+    <link rel="shortcut icon" href="{% static 'iptc/imgs/favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'iptc/imgs/favicon.ico' %}" type="image/x-icon">
+{% endblock favicon %}
+
     {% block google_scripts %}
         <!-- Google Tag Manager (noscript) -->
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM- N64VZH"
