--- a/mainsite/templates/hse_base.html
+++ b/mainsite/templates/hse_base.html
@@ -1,6 +1,11 @@
 {% extends "generic_base.html" %}
 {% load cms_tags sekizai_tags %}
-{% load menu_tags %}
+{% load menu_tags staticfiles %}
+
+{% block favicon %}
+    <link rel="shortcut icon" href="{% static 'hse/img/favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'hse/img/favicon.ico' %}" type="image/x-icon">
+{% endblock favicon %}
 
 {% block web_fonts %}
     {{ block.super }}
