--- a/mainsite/templates/html5.html
+++ b/mainsite/templates/html5.html
@@ -7,8 +7,8 @@
     <title>{% block title %}This is my new project home page{% endblock title %} - {% render_block "title2" %}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="{% page_attribute meta_description %}"/>
-	<link rel="shortcut icon" href="https://www.spe.org/static/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="https://www.spe.org/static/favicon.ico" type="image/x-icon">
+{#	<link rel="shortcut icon" href="https://www.spe.org/static/favicon.ico" type="image/x-icon">#}
+	{% block favicon %}<link rel="icon" href="https://www.spe.org/static/favicon.ico" type="image/x-icon">{% endblock favicon %}
 
     {# Add Third-party plugins and apps here. Like JQuery & bootstrap #}
     <!-- marketo scripts -->
