--- a/mainsite/templates/include_hse_header.html
+++ b/mainsite/templates/include_hse_header.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="row searchbar collapse" id="collapseSearch">
-            <div class="col-sm-12 text-right">
+            <div class="col-sm-10 col-sm-offset-1 text-right">
 {#                <form class="form-inline">#}
 {#                    <div class="input-group">#}
 {#                        <input type="text" class="form-control">#}
