ogf icon and IPTC page titles

--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -3,8 +3,8 @@
 {% load menu_tags staticfiles %}
 
 {% block favicon %}
-    <link rel="shortcut icon" href="{% static 'ogf/img/favicon.ico' %}" type="image/x-icon">
-    <link rel="icon" href="{% static 'ogf/img/favicon.ico' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'ogf/img/favicon2.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'ogf/img/favicon2.ico' %}" type="image/x-icon">
 {% endblock favicon %}
 
 {% block web_fonts %}
