--- a/mainsite/templates/html5.html
+++ b/mainsite/templates/html5.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>{% block title %}This is my new project home page{% endblock title %} - {% render_block "title2" %}</title>
+    <title>{% block title %}This is my new project home page{% endblock title %} {% render_block "title2" %}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="{% page_attribute meta_description %}"/>
 {#	<link rel="shortcut icon" href="https://www.spe.org/static/favicon.ico" type="image/x-icon">#}
