--- a/mainsite/templates/iptcnet/iptcnet_homepage.html
+++ b/mainsite/templates/iptcnet/iptcnet_homepage.html
@@ -1,7 +1,7 @@
 {% extends "iptcnet/iptcnet_base.html" %}
 {% load cms_tags sekizai_tags menu_tags staticfiles %}
 
-{% block title %}{% page_attribute "page_title" %}{% endblock title %}
+{% block title %}IPTC - {% page_attribute "page_title" %}{% endblock title %}
 
 {% block cms_content %}
 
