--- a/spe_events/templates/events_html5.html
+++ b/spe_events/templates/events_html5.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>{% block title %}This is my new project home page{% endblock title %} - {% render_block "title2" %}</title>
+    <title>{% block title %}This is my new project home page{% endblock title %} {% render_block "title2" %}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
 {% block favicon %}
