--- a/spe_events/templates/iptc/iptc_subpage_rightcol.html
+++ b/spe_events/templates/iptc/iptc_subpage_rightcol.html
@@ -1,7 +1,7 @@
 {% extends "iptc/iptc_base.html" %}
 {% load cms_tags sekizai_tags menu_tags staticfiles %}
 
-{% block title %}{% page_attribute "page_title" %}{% endblock title %}
+{% block title %}2019 IPTC - {% page_attribute "page_title" %}{% endblock title %}
 
 {% block cms_content %}
 
