--- a/spe_events/templates/atce/atce_base.html
+++ b/spe_events/templates/atce/atce_base.html
@@ -35,6 +35,11 @@
     {# adding block content_header to base cms template for overriding #}
     {% block content_header %}
 
+        <div class="row leaderboardAd" id="leaderboardAd">
+            <div class="col-md-12 text-center" id="adLeaderboard">
+                {% placeholder "ad zone leaderboard" %}
+            </div>
+        </div>
 
         <div class="global-nav row"><!--  navbar-fixed-top -->
             <nav id="global-nav" class="col-sm-10 col-sm-offset-1">
