ATCE ad size fix

--- a/spe_events/static/atce/css/_content.scss
+++ b/spe_events/static/atce/css/_content.scss
@@ -54,6 +54,14 @@
 .tiletitles {
   text-align:             center;
 }
+.tile-adspeed {
+  padding:                20px 0;
+
+  img {
+    max-height:           90px;
+    width:                auto;
+  }
+}
 
 /* =================================================================== */
 /* PANELS */
