ckeditor internal default font

--- a/mainsite/static/ckeditor/editor.css
+++ b/mainsite/static/ckeditor/editor.css
@@ -5,3 +5,11 @@ figcaption {
     background-color: transparent;
     border: none;
 }
+.cke_editable
+{
+	font-family: 'Arial', sans-serif;
+}
+/*body*/
+/*{*/
+	/*font-family: 'Arial', sans-serif;*/
+/*}*/
