HSE Category removal in article listing.

--- a/spe_blog/templates/spe_blog/plugins/image_left_hse_featured.html
+++ b/spe_blog/templates/spe_blog/plugins/image_left_hse_featured.html
@@ -17,7 +17,8 @@
                 {% else %}
                     <div class="col-sm-12">
                 {% endif %}
-                    <p><span class="pub-cat-left">{{ article.secondary_category }}</span> <span class="pub-date-left">{{ article.date|date:"d F Y" }}</span></p>
+{#                    <p><span class="pub-cat-left">{{ article.secondary_category }}</span> <span class="pub-date-left">{{ article.date|date:"d F Y" }}</span></p>#}
+                    <p><span class="pub-date-left">{{ article.date|date:"d F Y" }}</span></p>
                     <span class="spantitle">{{ article.title }}</span>
                     {% if article.onlineonly %}
                     <div class="col-sm-12 onlineonly">
