HSEnow Article Detail Page

--- a/mainsite/templates/include_hse_footer.html
+++ b/mainsite/templates/include_hse_footer.html
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <p>&nbsp;</p>
-                    <p class="footerText">HSE Now is a source for news and technical information affecting the health, safety, security, environment, social responsibility, regulation, and quality aspects of the upstream oil and gas industry. HSE Now is updated continually and is available to all SPE members.</p>
+                    <p class="footerText">HSE Now is a source for news and technical information affecting the health, safety, security, environment, and social responsibility discipline of the upstream oil and gas industry.</p>
                     <p class="copyright">&copy;2003-2016 Society of Petroleum Engineers, All Rights Reserved.</p>
                 </div>
             </div>
