HSENow Article Detail page & related content toggle

--- a/mainsite/static/hse/css/_basehtml.scss
+++ b/mainsite/static/hse/css/_basehtml.scss
@@ -4,6 +4,7 @@
 
 body {
   font-family:            $font-main;
+  font-size:              $font-p-size;
 }
 h1, h2, h3, h4 {
   font-family:            $font-titles;
