--- a/mainsite/static/hse/css/_content.scss
+++ b/mainsite/static/hse/css/_content.scss
@@ -29,7 +29,8 @@
 }
 
 .page-content {
-  margin-top:25px;
+  margin-top:       25px;
+  //border-top:       1px solid $col-hsebluedrk;
 }
 
 /* ********************************** */
@@ -560,4 +561,55 @@
 }
 .panel-default, .panel, .panel-collapse, .panel-group {
   border:none;
+}
+.article-topics, .article-tags {
+  background-color:   $col-hsegreylt;
+  padding:            10px;
+  font-size:          12px;
+  //margin-bottom:      15px;
+  //margin-top:         15px;
+  margin:             15px;
+
+  h4 {
+    margin:           0 0 5px 0;
+    padding-bottom:   5px;
+    color:            $col-white;
+    //border-bottom:    1px dotted $col-basegrey;
+  }
+  ul {
+    list-style:       none;
+    padding:          0;
+    margin:           0;
+
+    li {
+      //float:          left;
+      display:              inline-block;
+      list-style-position:  inside;
+      margin:               0 15px 0 0;
+      padding:              0;
+
+      &:hover {
+        background-color: $col-basegrey;
+        color:            $col-white;
+      }
+
+      a {
+        padding:          5px;
+        font-weight:      $font-bold;
+      }
+      a:hover {
+        background-color: $col-basegrey;
+        color:            $col-white;
+      }
+    }
+  }
+}
+.relatedArticle {
+  color:                $col-black;
+}
+.articlePicture {
+  margin-bottom:        15px;
+}
+.articleBodyText img {
+  margin:               10px;
 }
